[OW-68] Export API/BSS latency from ES to Prometheus -https://tbcasoft.atlassian.net/browse/OW-68

--- a/exporter.cfg
+++ b/exporter.cfg
@@ -79,5 +79,120 @@ QueryJson = {
       }
     }
   }
-  
-  
+# for API event 
+[query_api_response_time]
+# The DEFAULT settings can be overridden.
+QueryIntervalSecs = 60
+QueryTimeoutSecs = 15
+QueryIndices = overwatch-core-*
+QueryOnError = drop
+QueryOnMissing = zero
+QueryJson = {
+    "aggs": {
+      "apiName": {
+        "terms": {
+          "field": "name.keyword"
+        },
+        "aggs": {
+          "sourceNodeId": {
+            "terms": {
+              "field": "sourceNodeId.keyword"
+            },
+            "aggs": {
+              "status": {
+                "terms": {
+                  "field": "status.keyword"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "size": 0,
+    "query": {
+      "bool": {
+        "must": [],
+        "filter": [
+          {
+            "match_all": {}
+          },
+          {
+            "match_phrase": {
+              "eventType.keyword": "API"
+            }
+          },
+          {
+            "range": {
+              "@timestamp": {
+                "gte": "now-2m",
+                "lte": "now",
+                "format": "strict_date_optional_time"
+              }
+            }
+          }
+        ],
+        "should": [],
+        "must_not": []
+      }
+    }
+  }
+
+# for BSS event 
+[query_bss_response_time]
+# The DEFAULT settings can be overridden.
+QueryIntervalSecs = 60
+QueryTimeoutSecs = 15
+QueryIndices = overwatch-core-*
+QueryOnError = drop
+QueryOnMissing = zero
+QueryJson = {
+    "aggs": {
+      "apiName": {
+        "terms": {
+          "field": "name.keyword"
+        },
+        "aggs": {
+          "sourceNodeId": {
+            "terms": {
+              "field": "sourceNodeId.keyword"
+            },
+            "aggs": {
+              "status": {
+                "terms": {
+                  "field": "status.keyword"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "size": 0,
+    "query": {
+      "bool": {
+        "must": [],
+        "filter": [
+          {
+            "match_all": {}
+          },
+          {
+            "match_phrase": {
+              "eventType.keyword": "BSS"
+            }
+          },
+          {
+            "range": {
+              "@timestamp": {
+                "gte": "now-2m",
+                "lte": "now",
+                "format": "strict_date_optional_time"
+              }
+            }
+          }
+        ],
+        "should": [],
+        "must_not": []
+      }
+    }
+  }
