[OW-17]ElasticSearch integration with Prometheus for alerts -https://tbcasoft.atlassian.net/browse/OW-17

--- a/exporter.cfg
+++ b/exporter.cfg
@@ -25,12 +25,12 @@ QueryOnMissing = drop
 # Characters following this prefix will be used as a prefix for all metrics
 # generated for this query
 # for merchant discovery latency event: olaElapsedTime 
-[query_ola_merchant_discovery]
+[query_ow_es_ola_dsc_avg]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "latencies": {
+      "ms": {
         "avg": {
           "field": "olaElapsedTime"
         }
@@ -83,12 +83,12 @@ QueryJson = {
     }  
   }
 # 95 percentile
-[query_ola_merchant_discovery_latencies]
+[query_ow_es_ola_dsc_95th_pct]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "95percentiles": {
+      "ms": {
         "percentiles": {
           "field": "olaElapsedTime",
           "percents": [
@@ -144,12 +144,12 @@ QueryJson = {
     }  
   }
 # for merchant discovery latency event: apiElapsedTime 
-[query_api_merchant_discovery]
+[query_ow_es_api_dsc_avg]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "latencies": {
+      "ms": {
         "avg": {
           "field": "apiElapsedTime"
         }
@@ -202,12 +202,12 @@ QueryJson = {
     }  
   }
 # 95 percentile
-[query_api_merchant_discovery_latencies]
+[query_ow_es_api_dsc_95th_pct]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "95percentiles": {
+      "ms": {
         "percentiles": {
           "field": "apiElapsedTime",
           "percents": [
@@ -263,12 +263,12 @@ QueryJson = {
     }  
   }
 # for get invoice latencies event: olaElapsedTime 
-[query_ola_get_invoice]
+[query_ow_es_ola_get_inv_avg]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "latencies": {
+      "ms": {
         "avg": {
           "field": "olaElapsedTime"
         }
@@ -321,12 +321,12 @@ QueryJson = {
     }
   }
 # 95 percentile: olaElapsedTime
-[query_ola_get_invoice_latencies]
+[query_ow_es_ola_get_inv_95th_pct]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "95percentiles": {
+      "ms": {
         "percentiles": {
           "field": "olaElapsedTime",
           "percents": [
@@ -382,12 +382,12 @@ QueryJson = {
     }
   }
 # for get invoice latencies event: apiElapsedTime 
-[query_api_get_invoice]
+[query_ow_es_api_get_inv_avg]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "latencies": {
+      "ms": {
         "avg": {
           "field": "apiElapsedTime"
         }
@@ -440,12 +440,12 @@ QueryJson = {
     }
   }
 # 95 percentile: apiElapsedTime
-[query_api_get_invoice_latencies]
+[query_ow_es_api_get_inv_95th_pct]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "95percentiles": {
+      "ms": {
         "percentiles": {
           "field": "apiElapsedTime",
           "percents": [
@@ -501,12 +501,12 @@ QueryJson = {
     }
   }
 # for quote for payment latencies event 
-[query_quote_for_payment]
+[query_ow_es_quote_for_pmt_avg]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "latencies": {
+      "ms": {
         "avg": {
           "field": "elapsedTime"
         }
@@ -559,12 +559,12 @@ QueryJson = {
     }
   }
 # 95 percentile 
-[query_quote_for_payment_latencies]
+[query_ow_es_quote_for_pmt_95th_pct]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "95percentiles": {
+      "ms": {
         "percentiles": {
           "field": "elapsedTime",
           "percents": [
@@ -620,12 +620,12 @@ QueryJson = {
     }
   }
 # for pay latencies event 
-[query_pay]
+[query_ow_es_pay_avg]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "latencies": {
+      "ms": {
         "avg": {
           "field": "elapsedTime"
         }
@@ -678,12 +678,12 @@ QueryJson = {
     }
   }
   # 95 percentile 
-[query_pay_latencies]
+[query_ow_es_pay_95th_pct]
 # The DEFAULT settings can be overridden.
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "95percentiles": {
+      "ms": {
         "percentiles": {
           "field": "elapsedTime",
           "percents": [
