--- a/tc-exporter.cfg
+++ b/tc-exporter.cfg
@@ -738,4 +738,24 @@ QueryJson = {
       }
     }
   }
-  
+
+[query_ow_es_slo_block]
+QueryIndices = overwatch-filter-stellar-uptime-*
+QueryJson = {
+  "aggs": {
+    "height": {
+      "max": {
+        "field": "block_height"
+      }
+    }
+  },
+  "query": {
+    "range": {
+      "@timestamp": {
+        "gte": "now-20m/m",
+        "lt": "now/m",
+        "format": "strict_date_optional_time"
+      }
+    }
+  }
+}
