Fix parse error

--- a/tc-exporter.cfg
+++ b/tc-exporter.cfg
@@ -740,22 +740,23 @@ QueryJson = {
   }
 
 [query_ow_es_slo_block]
+# The DEFAULT settings can be overridden.
 QueryIndices = overwatch-filter-stellar-uptime-*
 QueryJson = {
-  "aggs": {
-    "height": {
-      "max": {
-        "field": "block_height"
+    "aggs": {
+      "height": {
+        "max": {
+          "field": "block_height"
+        }
       }
-    }
-  },
-  "query": {
-    "range": {
-      "@timestamp": {
-        "gte": "now-20m/m",
-        "lt": "now/m",
-        "format": "strict_date_optional_time"
+    },
+    "query": {
+      "range": {
+        "@timestamp": {
+          "gte": "now-20m/m",
+          "lt": "now/m",
+          "format": "strict_date_optional_time"
+        }
       }
     }
   }
-}
