Update block height metric

--- a/tc-exporter.cfg
+++ b/tc-exporter.cfg
@@ -741,11 +741,12 @@ QueryJson = {
 
 [query_ow_es_slo_block]
 # The DEFAULT settings can be overridden.
+QueryIntervalSecs = 10
 QueryIndices = overwatch-filter-stellar-uptime-*
 QueryJson = {
     "aggs": {
       "height": {
-        "max": {
+        "min": {
           "field": "block_height"
         }
       }
@@ -753,8 +754,8 @@ QueryJson = {
     "query": {
       "range": {
         "@timestamp": {
-          "gte": "now-20m/m",
-          "lt": "now/m",
+          "gte": "now-11m/s",
+          "lt": "now/s",
           "format": "strict_date_optional_time"
         }
       }
