Update block height metric from overwatch-core-*

--- a/tc-exporter.cfg
+++ b/tc-exporter.cfg
@@ -739,25 +739,35 @@ QueryJson = {
     }
   }
 
-[query_ow_es_slo_block]
+[query_ow_es_block]
 # The DEFAULT settings can be overridden.
 QueryIntervalSecs = 10
-QueryIndices = overwatch-filter-stellar-uptime-*
+QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
       "height": {
-        "min": {
-          "field": "block_height"
+        "max": {
+          "field": "stellarCore.ledgerNumber"
         }
       }
     },
     "query": {
-      "range": {
-        "@timestamp": {
-          "gte": "now-11m/s",
-          "lt": "now/s",
-          "format": "strict_date_optional_time"
-        }
+      "bool": {
+        "filter": [
+          {
+            "range": {
+              "@timestamp": {
+                "gte": "now-11s/s",
+                "lte": "now/s"
+              }
+            }
+          },
+          {
+            "match_phrase": {
+              "tbca_metadata.env.type.keyword": "stellar-status"
+            }
+          }
+        ]
       }
     }
   }
