--- a/tc-exporter.cfg
+++ b/tc-exporter.cfg
@@ -742,6 +742,8 @@ QueryJson = {
 [query_ow_es_block]
 # The DEFAULT settings can be overridden.
 QueryIntervalSecs = 10
+QueryOnError = preserve
+QueryOnMissing = preserve
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
@@ -757,7 +759,7 @@ QueryJson = {
           {
             "range": {
               "@timestamp": {
-                "gte": "now-11s/s",
+                "gte": "now-2h/s",
                 "lte": "now/s"
               }
             }
