Update block height query time interval and range

--- a/tc-exporter.cfg
+++ b/tc-exporter.cfg
@@ -741,7 +741,7 @@ QueryJson = {
 
 [query_ow_es_block]
 # The DEFAULT settings can be overridden.
-QueryIntervalSecs = 10
+QueryIntervalSecs = 15
 QueryOnError = preserve
 QueryOnMissing = preserve
 QueryIndices = overwatch-core-*
@@ -759,7 +759,7 @@ QueryJson = {
           {
             "range": {
               "@timestamp": {
-                "gte": "now-2h/s",
+                "gte": "now-1m/s",
                 "lte": "now/s"
               }
             }
