Fix cc block height in HA

--- a/cc-exporter.cfg
+++ b/cc-exporter.cfg
@@ -747,37 +747,24 @@ QueryOnMissing = preserve
 QueryIndices = overwatch-core-*
 QueryJson = {
     "aggs": {
-      "height_per_fixed_interval": {
-        "date_histogram": {
-          "field": "@timestamp",
-          "fixed_interval": "1m",
-          "time_zone": "UTC",
-          "min_doc_count": 0,
-          "order": {
-            "_key": "asc"
-          }
+      "node": {
+        "terms": {
+          "field": "stellarCore.quorumInfo.quorum.node.keyword"
         },
         "aggs": {
-          "block_height_node": {
-            "terms": {
-              "field": "stellarCore.quorumInfo.quorum.node.keyword"
-            },
-            "aggs": {
-              "block_height": {
-                "max": {
-                  "field": "stellarCore.quorumInfo.quorum.qset.ledger"
-                }
-              },
-              "include_source": {
-                "top_hits": {
-                  "size": 1,
-                  "_source": {
-                    "includes": [
-                      "node",
-                      "stellarCore.quorumInfo.quorum.node"
-                    ]
-                  }
-                }
+          "block_height": {
+            "max": {
+              "field": "stellarCore.quorumInfo.quorum.qset.ledger"
+            }
+          },
+          "include_source": {
+            "top_hits": {
+              "size": 10,
+              "_source": {
+                "includes": [
+                  "node",
+                  "stellarCore.quorumInfo.quorum.node"
+                ]
               }
             }
           }
@@ -790,7 +777,7 @@ QueryJson = {
           {
             "range": {
               "@timestamp": {
-                "gte": "now-1m/s",
+                "gte": "now-10s/s",
                 "lte": "now/s"
               }
             }
