Fix stellar uptime in HA

--- a/cc-exporter.cfg
+++ b/cc-exporter.cfg
@@ -801,37 +801,24 @@ QueryIntervalSecs = 15
 QueryIndices = overwatch-stellar-uptime-*
 QueryJson = {
     "aggs": {
-      "uptime_per_fixed_interval": {
-        "date_histogram": {
-          "field": "@timestamp",
-          "fixed_interval": "1m",
-          "time_zone": "UTC",
-          "min_doc_count": 0,
-          "order": {
-            "_key": "asc"
-          }
+      "node": {
+        "terms": {
+          "field": "node.keyword"
         },
         "aggs": {
-          "uptime_node": {
-            "terms": {
-              "field": "node.keyword"
-            },
-            "aggs": {
-              "uptime": {
-                "min": {
-                  "field": "uptime"
-                }
-              },
-              "include_source": {
-                "top_hits": {
-                  "size": 10,
-                  "_source": {
-                    "includes": [
-                      "site",
-                      "ip"
-                    ]
-                  }
-                }
+          "uptime": {
+            "min": {
+              "field": "uptime"
+            }
+          },
+          "include_source": {
+            "top_hits": {
+              "size": 10,
+              "_source": {
+                "includes": [
+                  "site",
+                  "ip"
+                ]
               }
             }
           }
